// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapComponent render it renders correctly 1`] = `
<div>
  <div
    className="card"
  >
    <img
      alt="Map image"
      className="card-img-top"
      src="http://lorempixel.com/640/480"
      width="100%"
    />
    <div
      className="card-body"
    >
      <ul>
        <li>
          <svg
            className="locationIcon icon"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "color": undefined,
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m19.8 2.5c6.2 0 11.2 5 11.2 11.3 0 8.7-11.2 23.7-11.2 23.7s-11.3-15-11.3-23.7c0-6.3 5-11.3 11.3-11.3z m0 14.9c2 0 3.6-1.6 3.6-3.6s-1.6-3.7-3.6-3.7-3.7 1.6-3.7 3.7 1.6 3.6 3.7 3.6z"
              />
            </g>
          </svg>
          <span
            className="address cardText"
          >
            51052 Roob Forge West Chesley Utah, 11729-3188
          </span>
          <svg
            className="editIcon"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "color": undefined,
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m29.8 14.8l-19.6 19.6-7.1-7.1 19.6-19.6z m4.6-7.9c0.9 0.9 0.8 2.5-0.2 3.5l-3.5 3.5-7.1-7.1 3.5-3.5c1-1 2.6-1.1 3.5-0.2z m-31.9 21.5l6.6 6.6-9.1 2.5z"
              />
            </g>
          </svg>
          <a
            className="edit cardText"
            href="#"
          >
            Edit
          </a>
           
        </li>
        <li>
          <svg
            className="icon phoneIcon"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "color": undefined,
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m32.3 26.3c1.2 1.2 2 2.7 0 5.1-2 2.4-3.3 2.4-5 2.4-1.9 0-4.6-1.1-7.3-3.2-2.5-1.8-3.6-2.6-6.1-5.2-2.7-2.7-4.3-5-6.2-8.4-2.1-3.9-1.9-5.7-1.4-7.2 0.3-0.9 1.1-1.8 2.2-2.5l0.1-0.1c0.4-0.3 1.4-0.9 2.5-0.9 1 0 1.9 0.4 2.6 1.4l0.1 0c0.9 1.1 1.9 2.5 2.5 3.7 0.8 1.6 0.8 3-0.1 4.1-0.7 1-0.9 1.5-0.9 1.8s0.4 0.7 1 1.5l0.1 0c1.2 1.4 1.6 1.8 2 2.3 0.1 0.1 0.3 0.2 0.3 0.2l0.2 0.2c0.5 0.5 0.8 0.9 2.3 2.2l0 0.1c0.6 0.4 0.7 0.6 1 0.6 0.4 0 1.2-0.6 2.2-1.2 0.4-0.2 0.9-0.4 1.4-0.4 2.1 0 5.3 2.3 6.4 3.5z"
              />
            </g>
          </svg>
          <span
            className="phoneNumber cardText"
          >
            942-284-4906
          </span>
        </li>
        <li>
          <svg
            className="icon mapIcon"
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "color": undefined,
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m17.5 2.5c9.7 0 17.5 7.8 17.5 17.5s-7.8 17.5-17.5 17.5-17.5-7.8-17.5-17.5c0-3 0.8-5.9 2.1-8.4-1.2-1-2.1-2.4-2.1-4.1 0-2.7 2.3-5 5-5 1.7 0 3.1 0.9 4.1 2.1 2.5-1.3 5.4-2.1 8.4-2.1z m-15 5c0 0.8 0.4 1.6 1 2 1-1.3 2.2-2.5 3.5-3.5-0.4-0.6-1.2-1-2-1-1.4 0-2.5 1.1-2.5 2.5z m25.6 23.1c2.8-2.8 4.4-6.6 4.4-10.6s-1.6-7.8-4.4-10.6-6.6-4.4-10.6-4.4-7.8 1.6-10.6 4.4-4.4 6.6-4.4 10.6 1.6 7.8 4.4 10.6 6.6 4.4 10.6 4.4 7.8-1.6 10.6-4.4z m-3.1-20.6s-4.2 10.2-5.6 11.9-9.4 8.1-9.4 8.1 4.2-10.3 5.6-11.9 9.4-8.1 9.4-8.1z"
              />
            </g>
          </svg>
          <a
            className="directions cardText"
            href="https://maps.google.com/?q=51052 Roob Forge West Chesley Utah, 11729-3188"
          >
            Get Directions
          </a>
           
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Stars Component render it renders correctly 1`] = `
<div>
  <div
    className="starContainer"
  >
    <div
      className="greyStar star"
    >
      <img
        alt="star img"
        className="starImage"
        src="test-file-stub"
      />
    </div>
    <div
      className="greyStar star"
    >
      <img
        alt="star img"
        className="starImage"
        src="test-file-stub"
      />
    </div>
    <div
      className="greyStar star"
    >
      <img
        alt="star img"
        className="starImage"
        src="test-file-stub"
      />
    </div>
    <div
      className="greyStar star"
    >
      <img
        alt="star img"
        className="starImage"
        src="test-file-stub"
      />
    </div>
    <div
      className="greyStar star"
    >
      <img
        alt="star img"
        className="starImage"
        src="test-file-stub"
      />
    </div>
    <div
      className="reviewText"
    >
      undefined reviews
    </div>
  </div>
</div>
`;

exports[`Title Component render it renders correctly 1`] = `
<div>
  <div
    className="title"
  >
    Nienow, Bradtke and Hills
  </div>
  <div>
    <div
      className="starContainer"
    >
      <div
        className="greyStar star"
      >
        <img
          alt="star img"
          className="starImage"
          src="test-file-stub"
        />
      </div>
      <div
        className="greyStar star"
      >
        <img
          alt="star img"
          className="starImage"
          src="test-file-stub"
        />
      </div>
      <div
        className="greyStar star"
      >
        <img
          alt="star img"
          className="starImage"
          src="test-file-stub"
        />
      </div>
      <div
        className="greyStar star"
      >
        <img
          alt="star img"
          className="starImage"
          src="test-file-stub"
        />
      </div>
      <div
        className="greyStar star"
      >
        <img
          alt="star img"
          className="starImage"
          src="test-file-stub"
        />
      </div>
      <div
        className="reviewText"
      >
        undefined reviews
      </div>
    </div>
  </div>
</div>
`;
